--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="https://www.revistaeyn.com/binrepository/1084x750/43c0/1000d750/none/26086/VVMA/moda-ropausada-americana-2023_5809344_20231018143322.jpg" />
+    <link rel="icon" type="image/svg+xml" href="./src/assets/icono.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mi Tienda</title>
+    <title>Fashionista</title>
   </head>
   <body>
     <div id="root"></div>
